--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,6 +63,8 @@
                 android:textColorHighlight="@color/cardview_dark_background"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
+                android:inputType="textPassword"
+
                 >
         </EditText>
 
@@ -88,7 +90,7 @@
         android:text = "Not yet registered?Sign Up Now!"
         android:textSize="14sp"
         android:id="@+id/etSignUp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_marginBottom="20dp"
         android:layout_gravity="center"
         >
